<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ali.yhooquote.ShowStockActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/symbol"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/symbolTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1" />

    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/changeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1" />

    </TableRow>
    
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/daysLow"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/daysLowTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1" />

    </TableRow>
    
    <TableRow
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/daysHigh"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/daysHighTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1" />

    </TableRow>

</TableLayout>
