<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ali.yhooquote.MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/searchET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textCapCharacters" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/searchBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchAction"
            android:text="@string/search" />

    </TableRow>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8F9779"
        />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/results"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8F9779"
        />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/aero" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TableLayout
                android:id="@+id/resultsTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            </TableLayout>
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clearAllAction"
            android:text="@string/clearAll" />
    </TableRow>
</TableLayout>
